<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="27dp"
            android:text="@string/jk_kode"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collon"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="8dp" />
        <TextView
            android:id="@+id/jk_kode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jk_kode_value"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/jk_kode_nama_mk"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collon"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="8dp" />
        <TextView
            android:id="@+id/jk_mk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jk_kode_nama_mk_value"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/jk_dosen"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collon"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/jk_dosen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jk_dosen_value"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/jk_jam"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collon"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/jk_jam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jk_jam_value"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/jk_ruang"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collon"
            android:textSize="17sp"
            style="@style/MyTextColor"
            android:layout_marginEnd="8dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/jk_ruang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jk_ruang_value"
                android:textSize="17sp"
                style="@style/MyTextColor"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>