<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    android:background="@color/colorWhite80"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.wisuda.prestasi.TambahPrestasiFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah_prestasi_baru"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            style="@style/MyTextColor"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite80"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nama_kejuaraan_lomba"
                android:background="@color/colorWhite80"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite80"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/edt_tahun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tahun_prestasi"
                android:background="@color/colorWhite80"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite80"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/edt_prestasi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/juara_pretasi"
                android:background="@color/colorWhite80"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite80"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/edt_tingkat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tingkat_prestasi"
                android:background="@color/colorWhite80"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite80"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/edt_jenis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/jenis_prestasi"
                android:background="@color/colorWhite80"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/btn_wrap_upload_bukti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_scan_bukti_piagam_pdf_jpg_maks_1_mb"/>
                <Button
                    android:id="@+id/btn_laporan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_file"
                    android:textAllCaps="false"
                    android:padding="20dp"
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite80" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="19dp"
                android:background="@color/colorAccent"
                android:orientation="vertical"
                android:layout_above="@id/btn_batal"
                android:layout_marginTop="50dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:src="@drawable/ic_save"
                        app:tint="@color/colorPrimary"
                        android:layout_marginEnd="14dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pg_simpan"
                        android:textSize="17sp"
                        style="@style/MyTextColor"
                        android:layout_marginEnd="20dp"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_batal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pg_batal"
                android:textAllCaps="false"
                android:padding="20dp"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:background="@color/colorGray"
                android:layout_alignParentBottom="true"
                android:textColor="@color/colorPrimary" />


        </RelativeLayout>
</LinearLayout>

