<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:orientation="vertical"
    tools:context=".ui.wisuda.daftar_wisuda.DaftarWisudaFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_wisuda"
        android:layout_marginBottom="2dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wisuda_prodi"
        android:layout_marginBottom="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="150dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_mood_bad"
                app:tint="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/belum_terdaftar"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:textSize="17sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>